database/operators/base/adminer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: database
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/html/plugins-enabled/login-servers.php
              subPath: login-servers.php
              name: plugins-config
      volumes:
        - name: plugins-config
          configMap:
            name: adminer-plugins-config
