database/operators/base/adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: database
spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
