database/operators/base/adminer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: database
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: adminer-tls
      hosts:
        - adminer.${PRIMARY_DOMAIN}
  rules:
    - host: adminer.${PRIMARY_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adminer
                port:
                  name: http
